upgrade to orion 5.5